--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -1,9 +1,15 @@
 /* Home.css */
 .home-container {
-    text-align: center; /* Center align text horizontally */
+    text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center align content vertically */
-    justify-content: center; /* Center align content horizontally */
-    height: 100vh; /* Make the container take up the full viewport height */
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: url('/public/assets/homePicture.jpg');
+    background-size: cover; 
+}
+.text-pink {
+    font-size: 1.3em; 
+    font-weight: bold;
   }
