--- a/frontend/src/components/ScoreBoard.css
+++ b/frontend/src/components/ScoreBoard.css
@@ -1,8 +1,43 @@
 /* In your CSS file (e.g., Scoreboard.css) */
+
+/* ScoreBoard.css */
+
 .scoreboard-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 30vh; /* This will make it take the full height of the viewport */
-  }
+    margin: 20px;
+    text-align: center;
+}
+
+table {
+    width: 70%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: Arial, sans-serif;
+}
+
+table th {
+    background-color: #007bff;
+    /* Header background color */
+    color: white;
+    /* Header text color */
+    padding: 10px;
+    text-align: center;
+}
+
+table td {
+    padding: 10px;
+}
+
+/* Alternating row background color */
+table tbody tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+/* Hover effect on rows */
+table tbody tr:hover {
+    background-color: #ddd;
+}
