--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 10;
     justify-content: center;
     height: 100vh;
     background-image: url('/public/assets/homePicture.jpg');
@@ -13,4 +14,5 @@
 .text-large {
     font-size: 1.3em;
     font-weight: bold;
+    margin-left: 5rem;
 }
